package com.agence.Trip.Transport;

public enum TransportPriority {
    PRICE,
    DURATION
}
